# protoPython

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  DESIGN.md  LICENSE  Makefile  README.md  check_stdlib.sh  diag_type.py  multithread_diag.txt  run_conformance.sh  test_assert_fail.py  test_assert_msg.py  test_assert_success.py  test_attr.py  test_debug.py  test_decorator.py  test_decorators_final.py  test_del.py  test_del_subscr.py  test_environ_bug.py  test_exception_catch.py  test_for.py  test_frames.py  test_generator_methods.py  test_hook.py  test_input.py  test_list.py  test_list_comp.py  test_nonlocal.py  test_oop.py  test_oop_minimal.py  test_os_simple.py  test_phase2.py  test_pkg_test.py  test_set_comp.py  test_shutil.py  test_simple.py  test_string_methods.py  (+2 more)
benchmarks/: MULTITHREAD_CPU_BENCHMARK.md  attr_lookup.py  call_recursion.py  check_open.py  check_threads.py  check_threads_simple.py  debug_threads.py  def_main_test.py  diag_minimal.py  exception_latency.py  exec_test.py  int_sum_loop.py  list_append_loop.py  main_test2.py  memory_pressure.py  multithread_cpu_diagnostic.py  multithreaded_cpu.py  only_import_thread.py  range_iterate.py  run_benchmarks.py  simple_write.py  str_concat_loop.py  test_import_thread.py  thread_ident_test.py  thread_tid_test.py
benchmarks/reports/: 2025-02-04_cpython314.md  2025-02-04_full.md  BENCHMARK_2026-02-04.md  BENCHMARK_ANALYSIS_2025-02-04.md  BENCHMARK_ANALYSIS_2026-02-04.md  BENCHMARK_ANALYSIS_2026-02-05.md  BENCHMARK_REPORT_2026-02-04.md  BENCHMARK_REPORT_2026-02-05.md  V72_FINAL_OPTIMIZATION.md  V72_PERFORMANCE_AUDIT.md  V72_POST_OPTIMIZATION.md  after_fix.md  after_module_mutex.md  benchmark_cpython_only.md  benchmark_report.md  cpython_only_quick.md  last_run.txt  latest_bench.md  performance_report_final.md  quick.md  run_2026-02-05_1453.md  run_output.txt  temp.md
benchmarks/tests/: test_kwargs.py
docs/: COMPATIBILITY_DASHBOARD.md  CPP_API_REFERENCE.md  CPYTHON_CONFORMANCE.md  C_MODULES_TO_REPLACE.md  DESIGN_DECISIONS.md  EXCEPTIONS.md  EXECUTION_ENGINE_OPCODES.md  EXECUTION_ENGINE_REGRESSIONS.md  FOR_LOOP_SUITE_FIX.md  FULL_STUB_IMPLEMENTATION.md  GIL_FREE_AUDIT.md  HPY_DEVELOPER_GUIDE.md  HPY_INTEGRATION_PLAN.md  HPY_REPL_INTEGRATION.md  HPY_USER_GUIDE.md  IMPLEMENTATION_PLAN.md  INSTALLATION.md  INTERNALS_DEEP_DIVE.md  L_SHAPE_ARCHITECTURE.md  NEXT_100_STEPS_HPY.md  NEXT_100_STEPS_V68_V72.md  NEXT_100_STEPS_V73_V77.md  NEXT_20_STEPS_V10.md  NEXT_20_STEPS_V11.md  NEXT_20_STEPS_V12.md  NEXT_20_STEPS_V13.md  NEXT_20_STEPS_V14.md  NEXT_20_STEPS_V15.md  NEXT_20_STEPS_V16.md  NEXT_20_STEPS_V17.md  NEXT_20_STEPS_V18.md  NEXT_20_STEPS_V19.md  NEXT_20_STEPS_V20.md  NEXT_20_STEPS_V21.md  NEXT_20_STEPS_V22.md  NEXT_20_STEPS_V23.md  NEXT_20_STEPS_V24.md  NEXT_20_STEPS_V25.md  NEXT_20_STEPS_V26.md  NEXT_20_STEPS_V27.md  (+67 more)
examples/: async_demo.py  embedding_sample.cpp  generators.py  threading_demo.py
examples/hpy/: math_hpy.cpp
include/protoPython/: AtexitModule.h  BasicBlockAnalysis.h  BuiltinsModule.h  BytecodeLoader.h  CodecsModule.h  CollectionsModule.h  CompiledModuleProvider.h  Compiler.h  CppGenerator.h  DAPServer.h  ExecutionEngine.h  FunctoolsModule.h  HPyABI.h  HPyContext.h  HPyModuleProvider.h  MemoryManager.hpp  NativeModuleProvider.h  OperatorModule.h  OsPathModule.h  Parser.h  PythonEnvironment.h  PythonModuleProvider.h  ReModule.h  SysModule.h  Tokenizer.h
lib/python3.14/: _collections_abc.py  _datetime.py  _imp.py  _opcode.py  _py_abc.py  _sysconfig_vars__linux_x86_64-linux-gnu.json  _sysconfigdata__linux_x86_64-linux-gnu.py  _tokenize.py  _typing.py  _weakref.py  abc.py  annotationlib.py  argparse.py  ast.py  atexit.py  base64.py  binascii.py  build-details.json  collections.py  configparser.py  contextlib.py  copy.py  copyreg.py  csv.py  ctypes.py  dataclasses.py  datetime.py  decimal.py  difflib.py  dis.py  enum.py  fractions.py  functools.py  gc.py  getopt.py  getpass.py  hashlib.py  heapq.py  html.py  inspect.py  (+36 more)
src/compiler/: CMakeLists.txt  CppGenerator.cpp  ProtopycMain.cpp
src/runtime/: CMakeLists.txt  main.cpp
tasks/: lessons.md  todo.md
test/: basic_test.py  def_newline_test.py  def_test.py  genexp_test.py  globals_test.py  import_test.py  inspect_only.py  native_import_test.py  os_debug.py  os_keys_newline.py  os_keys_test.py  os_only.py  parser_stress.py  path_test.py  python_import_test.py  sleep_test.py  test1.py  test2.py  test4.py  test_batch1_builtins.py  test_final.py  test_range.py  test_simple.py  test_unpack.py  threading_only.py  try_test2.py  try_test_v3.py  verify_all_batches.py  verify_b1.py  verify_half.py  verify_no_thread.py  verify_pass.py  verify_short.py  verify_test1.py  verify_vshort.py  with_test.py  with_test_v2.py
test/compiler/: run_module  run_module.cpp  test_phase1.py
test/cpython/: test_grammar.py  test_grammar_250.py  test_grammar_300.py  test_grammar_med.py  test_grammar_small.py  test_types_small.py
test/hpy/: stress_test_hpy.py
test/regression/: CMakeLists.txt  assert_exit.sh  dashboard.py  regrtest_runner.py  run_and_report.py  run_and_validate_output.py  test_regr.cpp
test/regression/results/: .gitignore  conformance_detailed.json  history.json
tests/: debug_collections.py  diag_gen.py  diag_repr.py  fix_compiler.py  fix_compiler_refined.py  gdb_output.txt  hello_os.py  hello_test.py  logs.txt  protocol_test_output.txt  range_iterate_output.txt  range_iterate_output_v10.txt  range_iterate_output_v2.txt  range_iterate_output_v4.txt  range_iterate_output_v5.txt  range_iterate_output_v6.txt  range_iterate_output_v7.txt  range_iterate_output_v8.txt  range_iterate_output_v9.txt  repro_closure.py  repro_defaults.py  repro_kwdefaults.py  repro_stopiter.py  test_all_verification.txt  test_args_kwargs.py  test_async.py  test_async_for.py  test_async_native.py  test_async_with.py  test_batch1_final.py  test_batch1_final_verification.txt  test_call_none.py  test_class.py  test_class_output.txt  test_class_output_v2.txt  test_class_output_v4.txt  test_collections_import.py  test_debug_loop.py  test_decorators_final.cpp  test_del_attr.py  (+61 more)
(+10 files in other folders)
